# ChangeLog for sys-devel/automake-wrapper
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-devel/automake-wrapper/ChangeLog,v 1.38 2010/02/24 08:08:27 mduft Exp $

  24 Feb 2010; Markus Duft <mduft@gentoo.org> files/am-wrapper-4.sh:
  use /usr/bin/env bash instead of /bin/bash to support prefix

  21 Feb 2010; Christian Faulhammer <fauli@gentoo.org>
  automake-wrapper-4.ebuild:
  stable x86, bug 295357

  15 Jan 2010; Christian Faulhammer <fauli@gentoo.org>
  automake-wrapper-4.ebuild:
  Transfer Prefix keywords

*automake-wrapper-4 (17 May 2009)

  17 May 2009; Mike Frysinger <vapier@gentoo.org>
  +automake-wrapper-4.ebuild, +files/am-wrapper-4.sh:
  Create a real new version rather than mucking with the FILESDIR.

*automake-wrapper-3-r2 (17 May 2009)

  17 May 2009; Diego E. Pettenò <flameeyes@gentoo.org>
  +automake-wrapper-3-r2.ebuild:
  Add an automake-wrapper compatible with automake 1.11.

  14 Feb 2007; Chris Gianelloni <wolf31o2@gentoo.org>
  automake-wrapper-2-r1.ebuild:
  Stable on amd64 wrt bug #153936.

  07 Jan 2007; Tobias Scherbaum <dertobi123@gentoo.org>
  automake-wrapper-3-r1.ebuild:
  ppc stable, bug #159417

  05 Jan 2007; Jeroen Roovers <jer@gentoo.org> automake-wrapper-3-r1.ebuild:
  Stable for HPPA (bug #159417).

  03 Jan 2007; Steve Dibb <beandog@gentoo.org> automake-wrapper-3-r1.ebuild:
  amd64 stable, bug 159417

  02 Jan 2007; Gustavo Zacarias <gustavoz@gentoo.org>
  automake-wrapper-3-r1.ebuild:
  Stable on sparc wrt #159417

  30 Dec 2006; Tom Gall <tgall@gentoo.org>
  automake-wrapper-3-r1.ebuild:
  Stable on ppc64, bug #159417

  30 Dec 2006; Andrej Kacian <ticho@gentoo.org>
  automake-wrapper-3-r1.ebuild:
  Stable on x86, bug #159417.

  30 Dec 2006; Bryan Østergaard <kloeri@gentoo.org>
  automake-wrapper-3-r1.ebuild:
  Stable on Alpha, bug 159417.

  13 Nov 2006; Tom Gall <tgall@gentoo.org>
  automake-wrapper-2-r1.ebuild:
  Stable on ppc64 wrt #153936
