@@ -1,0 +1,29 @@
+# Copyright 1999-2010 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/sys-devel/automake-wrapper/automake-wrapper-5.ebuild,v 1.1 2010/03/07 15:45:39 vapier Exp $
+
+inherit multilib
+
+DESCRIPTION="wrapper for automake to manage multiple automake versions"
+HOMEPAGE="http://www.gentoo.org/"
+SRC_URI=""
+
+LICENSE="GPL-2"
+SLOT="0"
+KEYWORDS="~alpha ~amd64 ~arm ~hppa ~ia64 ~m68k ~mips ~ppc ~ppc64 ~s390 ~sh ~sparc ~x86 ~ppc-aix ~sparc-fbsd ~x86-fbsd ~x64-freebsd ~x86-freebsd ~hppa-hpux ~ia64-hpux ~x86-interix ~amd64-linux ~ia64-linux ~x86-linux ~ppc-macos ~x64-macos ~x86-macos ~m68k-mint ~sparc-solaris ~sparc64-solaris ~x64-solaris ~x86-solaris"
+IUSE=""
+
+S=${WORKDIR}
+
+src_install() {
+	exeinto /usr/$(get_libdir)/misc
+	newexe "${FILESDIR}"/am-wrapper-${PV}.sh am-wrapper.sh || die
+
+	keepdir /usr/share/aclocal
+
+	dodir /usr/bin
+	local x=
+	for x in aclocal automake ; do
+		dosym ../$(get_libdir)/misc/am-wrapper.sh /usr/bin/${x}
+	done
+}
