@@ -1,6 +1,12 @@
 # ChangeLog for sys-devel/automake-wrapper
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-devel/automake-wrapper/ChangeLog,v 1.38 2010/02/24 08:08:27 mduft Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-devel/automake-wrapper/ChangeLog,v 1.39 2010/03/07 15:45:39 vapier Exp $
+
+*automake-wrapper-5 (07 Mar 2010)
+
+  07 Mar 2010; Mike Frysinger <vapier@gentoo.org>
+  +automake-wrapper-5.ebuild, +files/am-wrapper-5.sh:
+  Merge updates from autoconf-wrapper to get POSIX-only code.
 
   24 Feb 2010; Markus Duft <mduft@gentoo.org> files/am-wrapper-4.sh:
   use /usr/bin/env bash instead of /bin/bash to support prefix
